import x_malloc for production phase

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,7 +19,7 @@ ${NAME} : ${OBJS}
 obj/%.o : src/%.c Makefile
 	mkdir -p $(dir $@)
 	printf ${HBLU}" [%-37s] 🕝 \r"$(NC) "Compiling $(notdir $@)"
-	${CC} ${CFLAGS} ${DEPSFLAGS} -Iinclude -c $< -o $@
+	${CC} ${CFLAGS} ${DEPSFLAGS} -Iinclude -I../include -c $< -o $@
 
 clean :
 	${RM} obj
